Fix multiline overflow.

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ div.widget_recent_post_widget .widget-title {
   padding: 10px;
   text-overflow: ellipsis;
   overflow: hidden;
+  height: 40px;
 }
 
 .article-list li .entry-content {
@@ -144,4 +145,12 @@ div.widget_recent_post_widget .widget-title {
 .article-list li.ads {
   height: 50px;
   padding: 0;
+}
+
+.multiline-overflow {
+  width: 100%;
+  height: 21px;
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(224, 61, 61, 1));
 }
